estrutura atualizada para to do list

--- a/html/index.html
+++ b/html/index.html
@@ -11,10 +11,15 @@
 
 <body>
     <section class="container">
+        <h1>Lista de tarefas</h1>
+        <p>
+            <input type="text" class="input-nova-tarefa">
+            <button class="btn-add-tarefa">Adicionar nova tarefa</button>
+        </p>
 
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem qui recusandae eligendi dolorum accusantium, illo facere impedit iste perspiciatis deserunt temporibus eos, accusamus saepe quo quasi mollitia in cum. Quisquam assumenda excepturi
-            illum. Magnam ipsum qui totam placeat! Delectus soluta magni numquam nobis obcaecati magnam dolore, nesciunt iure rem quo.</p>
+        <ul class="tarefas">
+
+        </ul>
     </section>
     <script src="../js/index.js"></script>
 </body>
