algumas mudanças feitas no html

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <section class="container">
         <h1>Lista de tarefas</h1>
         <p>
-            <input type="text" class="input-nova-tarefa">
+            <input type="text" class="input-nova-tarefa" placeholder="escreva sua nova tarefa aqui...">
             <button class="btn-add-tarefa">Adicionar nova tarefa</button>
         </p>
 
